implémentation de l'update d'un comment
